--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -30,7 +30,7 @@
             android:defaultValue="3"
             android:entries="@array/ringer_mode_entries"
             android:entryValues="@array/ringer_mode_values"
-            android:key="gamespace_ringer_mode"  <!-- Fixed key -->
+            android:key="gamespace_ringer_mode"
             android:summary="%s"
             android:title="@string/ringer_mode_title" />
     </PreferenceCategory>
